RESOLVED FIXED39827
[GTK] Text copied from a WebView cannot be pasted into gnome-terminal
https://bugs.webkit.org/show_bug.cgi?id=39827
Summary [GTK] Text copied from a WebView cannot be pasted into gnome-terminal
Martin Robinson
Reported 2010-05-27 04:18:36 PDT
It seems that code in PasteboardGtk.cpp is advertising uri-list and image targets when they weren't available. The clipboard callback answered the request for uri-list data by filling the GtkSelectionData object with plain text data. I will attach a patch which simply uses the new clipboard code in PasteboardHelperGtk.cpp for all clipboard operations.
Attachments
Patch for this issue (16.38 KB, patch)
2010-05-27 04:24 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-05-27 04:24:30 PDT
Created attachment 57220 [details] Patch for this issue
Gustavo Noronha (kov)
Comment 2 2010-05-31 08:13:13 PDT
Comment on attachment 57220 [details] Patch for this issue Keep rocking.
Martin Robinson
Comment 3 2010-05-31 10:31:28 PDT
Note You need to log in before you can comment on or make changes to this bug.