2010-05-31  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Text copied from a WebView cannot be pasted into gnome-terminal
        https://bugs.webkit.org/show_bug.cgi?id=39827

        Switch all methods in Pasteboard to use the PasteboardHelper + DataObjectGtk
        approach used in other parts of WebKit GTK+.

        * platform/gtk/PasteboardGtk.cpp:
        (WebCore::Pasteboard::writeSelection): Switch to using PasteboardHelper.
        (WebCore::Pasteboard::writePlainText): Ditto.
        (WebCore::Pasteboard::writeURL): Ditto.
        (WebCore::Pasteboard::writeImage): Ditto.
        (WebCore::Pasteboard::clear): Small cleanup.
        (WebCore::Pasteboard::documentFragment): Switch to using PasteboardHelper.
        (WebCore::Pasteboard::plainText): Ditto.
2010-05-31  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Text copied from a WebView cannot be pasted into gnome-terminal
        https://bugs.webkit.org/show_bug.cgi?id=39827

        Add a test to prevent regressions for this issue.

        * tests/testcopyandpaste.c: Added.
        (test_info_new):
        (test_info_destroy):
        (copy_and_paste_fixture_setup):
        (copy_and_paste_fixture_teardown):
        (load_status_cb):
        (map_event_cb):
        (test_copy_and_paste):
        (main):

Canonical link: https://commits.webkit.org/51486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60447 268f45cc-cd09-0410-ab3c-d52691b4dbfc